<resources>
    <string name="app_name">食在安心</string>
    <string name="head_info">食在安心</string>
    <string name="search_in">文字搜尋</string>
    <string name="pigfor">data</string>
    <string name="textview">TextView</string>
    <string name="button_a">商家登入</string>
    <string name="loginhead">廠商用戶請點此</string>
    <string name="emailinfo">請輸入email</string>
    <string name="userinfo">請輸入帳號</string>
    <string name="password">請輸入密碼</string>
    <string name="buttomB">非商家使用者請點我返回主頁</string>
    <string name="buttonc">點我登入</string>
    <string name="buttonD">點我註冊</string>
    <string name="betainfo">版本號1.00001</string>
    <string name="productname">請輸入產品名稱</string>
    <string name="produce_from">請輸入產品產地</string>
    <string name="meatfrom">請輸入產品出產國</string>
    <string name="contentdata">請輸入聯繫方式</string>
    <string name="productheader">產品輸入頁面</string>
    <string name="name">Name</string>
    <string name="button0">點我搜尋</string>
    <string name="TV" />
    <string name="TVinfo">顯示結果</string>
    <string name="buttonback">送出資料並返回主頁面</string>
    <string name="btn_A">btn_A</string>
    <string name="user_login">用戶登入</string>
    <string name="user_login_main">使用者登入</string>
    <string name="comany_list_main">廠商產品清單</string>
    <string name="input_data_button">點擊新增產品資訊</string>
    <string name="company_login">登入</string>
    <string name="login_head">廠商登入介面</string>
    <string name="register_head">廠商註冊介面</string>
    <string name="register_username">請輸入帳號</string>
    <string name="register_email">請輸入e_mail</string>
    <string name="register_password">請輸入密碼</string>
    <string name="register_password_correct">請確認密碼</string>
    <string name="register_button">註冊</string>
    <string name="product_from_where">產品產地</string>
    <string name="produce_ingredient">產品成分</string>
    <string name="product_ingredient">請輸入產品成分</string>
    <string name="meat_from">請輸入肉品產地</string>
    <string name="product_additives">請輸入產品添加物</string>
    <string name="_1231564654">1231564654</string>
    <string name="betainfo0522">版本號1.0004</string>
    <string name="sca_img">sca_img</string>
    <string name="user_title">用戶主頁面</string>
    <string name="user_signup">用戶註冊</string>
    <string name="user_name">請輸入暱稱</string>
    <string name="user_phone">請輸入電話</string>
    <string name="user_test">驗證碼</string>
    <string name="home">首頁</string>
    <string name="history">歷史紀錄</string>
    <string name="user">會員資料</string>
    <string name="detial">detial</string>
    <string name="searchimg">searchimg</string>
    <string name="food_follow">指定食品追蹤</string>
    <string name="result_img">result_img</string>
    <string name="login_id">請輸入帳號</string>
    <string name="deatil">食品詳細資訊</string>
    <string name="food_mark">食品書籤</string>
    <string name="company_register">商家註冊</string>
    <string name="favorite_mark">記錄你的最愛</string>
    <string name="produce_input">產品輸入頁面</string>
    <string name="produce_input_title">產品輸入</string>
    <string name="produce_input_info">產品資訊填寫</string>
    <string name="input_data_page1">確定資料送出前往下一頁</string>
    <string name="back_to_list_info">點此返回清單頁面</string>
    <string name="produce_input_additive">食品添加物輸入</string>
    <string name="produce_input_additive_info">食品添加物填寫</string>
    <string name="input_addtive">請輸入食品添加物(添加劑名稱)</string>
    <string name="weightinfo">請輸入產品重量</string>
    <string name="quantityinfo">請輸入產品份量</string>
    <string name="calories">請輸入產品熱量(單位/大卡)</string>毫
    <string name="protein">請輸入產品蛋白質(單位/克)</string>
    <string name="fat">請輸入產品脂肪(單位/克)</string>
    <string name="saturatedfat">請輸入產品飽和脂肪(單位/克)</string>
    <string name="transfat">請輸入產品反式脂肪(單位/克)</string>
    <string name="sugar">請輸入產品糖份(單位/克)</string>
    <string name="na">請輸入產品鈉含量(單位/克)</string>
    <string name="previous">點此返回上一頁</string>
    <string name="next">確定資料送出前往下一頁</string>
    <string name="title">產品成份填寫</string>
    <string name="History_head">歷史紀錄</string>
    <string name="history_second">您近期查詢過的資料</string>
    <string name="Userinfo_head">用戶資料</string>
    <string name="totallyweight_info">請輸入產品總重</string>
    <string name="input_ingredient1">請輸入產品成分(ex.澳洲牛肉)</string>
    <string name="product_from_ingredient">產品成分填寫(原材料)</string>
    <string name="qrcode_info">點我掃碼</string>
    <string name="qrcode_text">顯示掃描資訊</string>
    <string name="company_detail_title">產品資訊修改/確認</string>
    <string name="datafix_info">點我修改資料</string>
    <string name="data_fix_access">確認修改資料並送出</string>
    <string name="create_qrcode_info">創建此產品的專屬QR code</string>
    <string name="name_name">產品名稱</string>
    <string name="totalweight_name">產品總重</string>
    <string name="origin_name">產品產地</string>
    <string name="weight_name">重量</string>
    <string name="quantity_name">份量</string>
    <string name="calories_name">熱量</string>
    <string name="protein_name">蛋白質</string>
    <string name="fat_name">脂肪</string>
    <string name="saturatedfat_name">飽和脂肪</string>
    <string name="transfat_name">反式脂肪</string>
    <string name="sugar_name">糖份</string>
    <string name="na_name">鈉含量</string>
    <string name="comment_hint">在此輸入您的意見</string>


</resources>