<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_login">

    <ImageView
        android:id="@+id/login_imageHeader"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/login_header_pic"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_header_layer"
        app:layout_constraintBottom_toBottomOf="@id/login_imageHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/login_imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:scaleType="centerCrop"
            android:layout_width="200dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="用戶登入"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/login_imageHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="登入"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/login_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/textLogin"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="40dp"
            android:textColorHint="@color/colorTextHint"/>

        <View
            android:id="@+id/viewDividerForaddtive1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@id/ed_account" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_ic_email"
            app:layout_constraintBottom_toBottomOf="@id/ed_account"
            app:layout_constraintStart_toStartOf="@id/ed_account"
            app:tint="@color/colorTextHint" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForaddtive1"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="40dp"
            android:textColorHint="@color/colorTextHint" />

        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_ic_lock"
            app:layout_constraintBottom_toBottomOf="@id/ed_password"
            app:layout_constraintStart_toStartOf="@id/ed_password"
            app:tint="@color/colorTextHint" />


        <Button
            android:id="@+id/btn_search"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="57dp"
            android:background="@drawable/login_primary_button_background"
            android:backgroundTint="#00DCC7"
            android:text="@string/user_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ed_password" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_primary_button_background"
            android:backgroundTint="#00DCC7"
            android:text="@string/buttonD"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search" />

        <Button
            android:id="@+id/btn_company_A"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="231dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/login_primary_button_background"
            android:backgroundTint="#00DCC7"
            android:text="@string/loginhead"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>