<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#8E8E8E"
    tools:context=".History_page">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_header_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_header_layer"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="323dp"
        android:layout_height="91dp"
        android:background="@drawable/res_bg"
        android:elevation="15dp"
        android:translationY="-30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8">

        <TextView
            android:id="@+id/res_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/History_head"
            android:textColor="@color/colorTextHint"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_second"
            android:textColor="@color/colorTextHint"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/res_name"
            app:layout_constraintTop_toBottomOf="@+id/res_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="345dp"
        android:layout_height="470dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12">

        <ListView
            android:id="@+id/listview"
            android:layout_width="323dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:scaleType="centerInside"
            android:text="@string/home"
            app:srcCompat="@drawable/m_home" />

        <ImageButton
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/m_history" />

        <ImageButton
            android:id="@+id/btn_userinfo"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/m_user" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="134dp" />

</androidx.constraintlayout.widget.ConstraintLayout>